Restart from beginning. option parser added.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ authors = ["SeongChan Lee <foriequal@gmail.com>"]
 [dependencies]
 rand = "*"
 itertools = "*"
+rustc-serialize = "*"
+url = "*"
+zmq = "*"
+getopts = "*"
